css/default.css
/* ... */
section.collapse:not(.expanded) {
	display: flow-root;
}

section.collapse.has-abstract,
section.collapse.expanded {
	padding-top: 0;
}

section.collapse.expanded > .disclosure-button .part.top .label {
    display: none;
}

section.collapse > :first-child {
    position: relative;
    height: var(--collapse-toggle-top-height);
    margin: 
    	0 
    	var(--collapse-toggle-top-height)
    	0 
    	calc(-1 * var(--collapse-toggle-left-width));
    padding: 0;
    white-space: nowrap;
    overflow: hidden;
    z-index: 12;
    pointer-events: none;
}

section.collapse > :first-child > a {
    position: relative;
    pointer-events: auto;
}
section.collapse > :first-child > a,
section.collapse > :first-child > a * {
    text-shadow: none;
}

section.collapse > :first-child > a::after {
    top: -0.1em;
    left: 0.5em;
}

section.collapse > h1:first-child > a {
	top: 0.1em;
}

section.collapse > h2:first-child {
    line-height: 1.75;
}
section.collapse > h2:first-child::after {
    content: none;
}
section.collapse > h2:first-child a::after {
    top: -0.2em;
}

/*	“Bare” nested sections.
 */
section > :first-child + section.collapse {
	margin-top: 0;
}

section.collapse:not(.expanded) > .collapse-content-wrapper {
	max-height: 0;
}

/**********************************/
/*  Collapsible non-section blocks.
 */
div.collapse:not(.has-abstract):not(.expanded) > .disclosure-button {
    box-shadow: none;
}

div.collapse:not(.expanded) > .disclosure-button .part::before {
    opacity: 0.85;
}
div.collapse.has-abstract:not(.expanded) > .disclosure-button .part::before {
    opacity: 1.0;
}

/***************************/
/*  Collapsible code blocks.
 */

.sourceCode.collapse {
	margin-top: 1.75em;
	margin-bottom: 1.75em;
}
.sourceCode.collapse pre {
    margin: 0;
}
.sourceCode.collapse.expanded .sourceCode {
	margin-top: 0.5em;
	margin-bottom: 0.5em;
}
.sourceCode.collapse:not(.expanded) .collapse-content-wrapper pre {
    max-height: calc(  var(--collapse-toggle-top-height) 
    				 + var(--collapse-toggle-bottom-height));
    box-sizing: border-box;
    overflow: hidden;
}

.sourceCode.collapse:not(.expanded) .collapse-content-wrapper.width-full {
    max-width: 100%;
    margin: 0 !important;
}

.sourceCode.collapse:not(.expanded) > .disclosure-button .part::before {
    opacity: 0.70;
}

.sourceCode.collapse > .disclosure-button .part.top .label,
.sourceCode.collapse > .disclosure-button .part.top .icon {
    margin-top: 1px;
}
.sourceCode.collapse > .disclosure-button .part.top .icon {
	margin-right: 1px;
}
.sourceCode.collapse > .disclosure-button .part.bottom .label {
    margin-bottom: 1px;
}

/**********************/
/*  Collapsible tables.
 */

.table-wrapper.collapse:not(.expanded) {
    overflow: hidden;
    margin-left: 0;
    padding: 0;
}

.table-wrapper.collapse > .disclosure-button .part.top .label,
.table-wrapper.collapse > .disclosure-button .part.top .icon {
    margin-top: 2px;
}

.table-wrapper.collapse.expanded .table {
	margin-top: 0.5em;
	margin-bottom: 0.5em;
}

/****************************/
/*  Collapses in blockquotes.
 */

blockquote .collapse {
	--collapse-blockquote-side-padding: 1.25em;
	--collapse-blockquote-bottom-padding: 1em;
}
@media all and (max-width: 649px) {
	blockquote .collapse {
		--collapse-blockquote-side-padding: 1em;
		--collapse-blockquote-bottom-padding: 0.75em;
	}
}

blockquote .collapse,
blockquote .collapse.expanded {
    padding-left: var(--collapse-blockquote-side-padding);
    padding-right: var(--collapse-blockquote-side-padding);
    margin-left: calc(-1 * var(--collapse-blockquote-side-padding));
    margin-right: calc(-1 * var(--collapse-blockquote-side-padding));
}
.markdownBody blockquote > .collapse:last-child {
    margin-bottom: calc(-1 * var(--collapse-blockquote-bottom-padding));
}

blockquote .collapse::before {
    background-color: var(--GW-blockquote-background-color);
}

blockquote .collapse > .disclosure-button {
	--collapse-button-text-color: var(--GW-collapse-in-blockquote-disclosure-button-text-color);
    --collapse-button-background-color: var(--GW-collapse-in-blockquote-disclosure-button-color);
}
blockquote .collapse > .disclosure-button:hover {
	--collapse-button-text-color: var(--GW-collapse-in-blockquote-disclosure-button-text-hover-color);
    --collapse-button-background-color: var(--GW-collapse-in-blockquote-disclosure-button-hover-color);
}

blockquote .collapse:not(.expanded) > .disclosure-button .part::before {
    opacity: 0.70;
}
blockquote .collapse.has-abstract:not(.expanded) > .disclosure-button .part::before {
    opacity: 1.0;
}

/*******************************************************************/
/*  “Aux links” in link bibliographies, directory indexes, and other 
	transcluded (rather than pop-framed) annotations.
 */

.annotation .collapse.aux-links-container {
	--collapse-toggle-top-height: 2.25rem;

    border-top: 1px solid var(--GW-TOC-border-color);
	margin-bottom: 0;
}
.annotation p + .collapse.aux-links-container {
    margin-top: 1.25em;
}
.annotation .collapse.aux-links-container + .collapse.aux-links-container {
    margin-top: 0;
}
.annotation .TOC + .collapse.aux-links-container {
    margin-top: 0.75em;
}

.annotation .collapse.aux-links-container .aux-links-append {
    padding-left: 0;
}

/******************************/
/*	Content in collapse blocks.
 */
.collapse.expanded > .collapse-content-wrapper > :last-child {
	margin-bottom: 0.5em;
}

.collapse:not(.has-abstract).expanded > .collapse-content-wrapper > p:first-child {
	margin-top: 0.5em;
}

div.collapse:not(.has-abstract):not(.expanded) > .collapse-content-wrapper > p {
	margin-left: 0.375em;
}

.collapse section > :first-child {
	margin-left: 0;
}

/***********************/
/*  Collapse edge cases.
 */

li > :not(section).collapse {
    margin-left: calc(-1 * var(--GW-list-left-padding));
}
li > :not(section).collapse.expanded,
li > :not(section).collapse:not(.expanded) {
    padding-left: var(--GW-list-left-padding);
}
/* ... */

